<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/cocktailImage"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/goldrush"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cocktail"/>

    <TextView
        android:id="@+id/cocktailName"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cocktail_name_placeholder"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:lines="2"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/baseSpirit"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/base_spirit_placeholder"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        android:lines="1" />

    <TextView
        android:id="@+id/ingredientsTitle"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/ingredientsTitle"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/ingredients"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/base_spirit_placeholder"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/stepsTitle"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/stepsTitle"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/steps"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/base_spirit_placeholder"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>