<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp"
            android:clickable="true"
            app:cardElevation="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <ImageView
                    android:id="@+id/cocktailImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/placeholder"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/cocktail"/>
                <!--android:textColor="@color/black"-->
                <TextView
                    android:id="@+id/cocktailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cocktail_name_placeholder"
                    android:textSize="15sp"
                    android:lines="2"
                    android:textStyle="bold"/>
                <!--android:textColor="@color/purple_200"-->
                <TextView
                    android:id="@+id/baseSpirit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/base_spirit_placeholder"
                    android:textSize="12sp"
                    android:lines="1" />


            </LinearLayout>

       </androidx.cardview.widget.CardView>

</LinearLayout>
